# P4_Mailing_Service_1

./: .env.sample  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mail.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: base.html  header.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  statistics.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py  fill_group_managers.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  user_detail.html  user_form.html  user_list.html
users/templatetags/: my_tags.py
